Refine-Kubernetes-Setups/secret-demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-demo-pod
spec:
  containers:
  - name: myapp-container
    image: busybox
    args:
      - sleep
      - "3600"  # Keeps the pod alive for 3600 seconds (1 hour)
  restartPolicy: Never
