Refine-Kubernetes-Setups/secret-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-volume-pod
spec:
  containers:
  - name: myapp-container
    image: busybox
    command:
      - sleep
      - "3600"  # Keeps the pod alive for 3600 seconds (1 hour)
    volumeMounts:
    - name: secret-volume
      mountPath: "/etc/secret"
      readOnly: true
  volumes:
  - name: secret-volume
    secret:
      secretName: db-secret
  restartPolicy: Never
